歴史完全版

--- a/history/term4/print5.html
+++ b/history/term4/print5.html
@@ -108,9 +108,8 @@
     <ul>
       <li>新聞が発行部数をのばし，『朝日新聞』と『毎日新聞』は1920年代にいずれも100万部を突破</li>
       <li>新聞小説では中里介山，直木三十五，吉川英治や大佛次郎ら大衆作家が活躍した</li>
-      <li>『<span class="toggle-text">中央公論</span>』『改造』などの総合雑誌や『キング』などの大衆雑誌が人気と</li>
+      <li>『<span class="toggle-text">中央公論</span>』『改造』などの総合雑誌や『キング』などの大衆雑誌が人気となり，雑誌の刊行もさかんになった</li>
     </ul>
-    <h3 id="なり雑誌の刊行もさかんになった">なり，雑誌の刊行もさかんになった</h3>
     <ul>
       <li>1926年に刊行を開始した『現代日本文学全集』は１冊１円という低価格から「<span class="toggle-text">円本</span>」とよばれた</li>
     </ul>
