--- a/history/term4/print8.html
+++ b/history/term4/print8.html
@@ -20,7 +20,7 @@
     <h3 id="ブロック経済圏の構築">ブロック経済圏の構築</h3>
     <ul>
       <li>世界恐慌で主要国は金本位制から離脱した</li>
-      <li>イギリス・ドイツ・アメリカなどは排他的な〔〕を形成して不況の緩和をはかった</li>
+      <li>イギリス・ドイツ・アメリカなどは排他的な<span class="toggle-text">ブロック経済圏</span>を形成して不況の緩和をはかった</li>
       <li>日本も満洲と華北をふくむ「日満支」ブロックを形成
         <ul>
           <li>…各国間の政治的・経済的摩擦を強めた</li>
@@ -30,17 +30,17 @@
     <h3 id="ドイツの情勢と第二次世界大戦">ドイツの情勢と第二次世界大戦</h3>
     <ul>
       <li>1933年，ヒトラーのひきいるナチス（国民社会主義ドイツ労働者党）が政権をとり，1935年，ヴェルサイユ条約に反して再軍備を宣言</li>
-      <li>日本は，ソ連の脅威に備えるため，1936年に〔〕を結び，翌年にはイタリアも加わった</li>
+      <li>日本は，ソ連の脅威に備えるため，1936年に<span class="toggle-text">日独防共協定</span>を結び，翌年にはイタリアも加わった</li>
       <li>ドイツは1939年８月にソ連と不可侵条約を結び，翌月に両国で東西からポーランドに侵攻を開始
         <ul>
-          <li>→〔〕が勃発した</li>
+          <li>→<span class="toggle-text">第二次世界大戦</span>が勃発した</li>
         </ul>
       </li>
     </ul>
     <h3 id="日本国内の政局">日本国内の政局</h3>
     <ul>
       <li>日本では，日独伊防共協定を強化する動きと，対英米関係を重視して日中戦争の解決をめざす動きがあった</li>
-      <li>1939年１月に成立した〔〕内閣は，独ソ不可侵条約に対し「欧州情勢は複雑怪奇」との声明を出して総辞職，ドイツとの軍事同盟は遠のいた</li>
+      <li>1939年１月に成立した<span class="toggle-text">平沼騏一郎</span>内閣は，独ソ不可侵条約に対し「欧州情勢は複雑怪奇」との声明を出して総辞職，ドイツとの軍事同盟は遠のいた</li>
       <li>阿部信行内閣と米内光政内閣は日中戦争の解決を優先し，ヨーロッパの戦争から距離をとった
         <ul>
           <li>…両内閣は，陸軍の介入でいずれも短命に終わった</li>
@@ -49,13 +49,13 @@
     </ul>
     <h3 id="南進論の強まり">南進論の強まり</h3>
     <ul>
-      <li>蔣介石に対する物資の輸送路（援蔣ルート）を断ちきり，重要資源を確保するため，東南アジア方面への進出論（〔〕）が強まった</li>
+      <li>蔣介石に対する物資の輸送路（援蔣ルート）を断ちきり，重要資源を確保するため，東南アジア方面への進出論（<span class="toggle-text">南進論</span>）が強まった</li>
       <li>1939年の海南島占領は，こうした戦略のあらわれとみなされ，各国の警戒をまねいた</li>
     </ul>
     <h3 id="ソ連とは">ソ連とは</h3>
     <ul>
       <li>満洲国境をめぐる紛争がつづいていた</li>
-      <li>〔〕は両国が多数の死者を出す大規模な戦闘に発展した
+      <li><span class="toggle-text">ノモンハン事件</span>は両国が多数の死者を出す大規模な戦闘に発展した
         <ul>
           <li>→兵力・装備におとる日本軍の敗北におわり，このことも，南進論に勢いをあたえた</li>
         </ul>
@@ -66,25 +66,25 @@
       <li>1940年，ドイツ軍は周辺国を次々と占領し，６月にフランスを降伏させた，同月，イタリアも参戦</li>
       <li>翌月，近衛文麿がふたたび内閣を組織した
         <ul>
-          <li>→第２次近衛内閣は「〔〕」構想を打ち出した</li>
+          <li>→第２次近衛内閣は「<span class="toggle-text">大東亜共栄圏</span>」構想を打ち出した</li>
         </ul>
       </li>
-      <li>近衛は，９月にフランス領インドシナ北部（北部仏印）に軍隊を進駐，〔〕（三国同盟）に調印した</li>
+      <li>近衛は，９月にフランス領インドシナ北部（北部仏印）に軍隊を進駐，<span class="toggle-text">日独伊三国軍事同盟</span>（三国同盟）に調印した</li>
     </ul>
     <h3 id="新体制運動の展開">「新体制運動」の展開</h3>
     <ul>
-      <li>国内では，政治・経済・文化などあらゆる分野の革新をめざした「〔〕」が展開された</li>
+      <li>国内では，政治・経済・文化などあらゆる分野の革新をめざした「<span class="toggle-text">新体制運動</span>」が展開された</li>
       <li>一国一党体制がめざされ，諸政党は解党
         <ul>
-          <li>…1940年10月に成立した〔〕は政党（政治結社）ではないとされ，「公事結社」と位置づけられた</li>
+          <li>…1940年10月に成立した<span class="toggle-text">大政翼賛会</span>は政党（政治結社）ではないとされ，「公事結社」と位置づけられた</li>
         </ul>
       </li>
-      <li>職場ごとの産業報国会は，1940年に設立された全国組織の〔〕に統一された</li>
-      <li>〔〕は企業に業界ごとの統制会をつくらせた</li>
+      <li>職場ごとの産業報国会は，1940年に設立された全国組織の<span class="toggle-text">大日本産業報国会</span>に統一された</li>
+      <li><span class="toggle-text">革新官僚</span>は企業に業界ごとの統制会をつくらせた</li>
     </ul>
     <h3 id="アメリカの反発">アメリカの反発</h3>
     <ul>
-      <li>中国での日本の軍事行動の拡大に反発したアメリカは，1939年，〔〕を通告
+      <li>中国での日本の軍事行動の拡大に反発したアメリカは，1939年，<span class="toggle-text">日米通商航海条約の廃棄</span>を通告
         <ul>
           <li>→翌年に条約が失効すると，対日貿易が制限された</li>
         </ul>
@@ -94,7 +94,7 @@
     <h3 id="近衛内閣の対米交渉">近衛内閣の対米交渉</h3>
     <ul>
       <li>近衛内閣は，アメリカとの妥協の可能性をみいだすため，1941年４月から駐米大使の野村吉三郎を通じてハル国務長官との日米交渉を開始した</li>
-      <li>一方，松岡洋右外相は，対米交渉を有利にしようともくろみ，４月に〔〕を締結した
+      <li>一方，松岡洋右外相は，対米交渉を有利にしようともくろみ，４月に<span class="toggle-text">日ソ中立条約</span>を締結した
         <ul>
           <li>→６月に独ソ戦が開始されると，この構想は破綻した</li>
         </ul>
@@ -105,16 +105,16 @@
     <ul>
       <li>1941年７月に発足した第３次近衛内閣は，フランス領インドシナ南部（南部仏印）へ軍隊を進駐させた
         <ul>
-          <li>→アメリカは〔〕，〔〕した</li>
+          <li>→アメリカは<span class="toggle-text">在米日本資産を凍結</span>，<span class="toggle-text">日本への石油輸出を禁止</span>した</li>
         </ul>
       </li>
       <li>イギリスとオランダもアメリカに同調，日本国内で，「ABCD包囲陣」の危機が喧伝され，国民のあいだに開戦の機運が高まった</li>
     </ul>
     <h3 id="御前会議と東条英機">御前会議と東条英機</h3>
     <ul>
-      <li>９月の〔〕では，戦争準備を進めつつ10月まで交渉を継続することとした
+      <li>９月の<span class="toggle-text">御前会議</span>では，戦争準備を進めつつ10月まで交渉を継続することとした
         <ul>
-          <li>→10月を迎えると，交渉継続をはかる近衛首相と，打ちきりを主張する〔〕陸相が衝突した</li>
+          <li>→10月を迎えると，交渉継続をはかる近衛首相と，打ちきりを主張する<span class="toggle-text">東条英機</span>陸相が衝突した</li>
           <li>→近衛内閣は総辞職，東条が首相に就任</li>
         </ul>
       </li>
@@ -122,7 +122,7 @@
     </ul>
     <h3 id="対米交渉の決裂と開戦">対米交渉の決裂と開戦</h3>
     <ul>
-      <li>11月26日，〔〕が示され，交渉は絶望的となり，12月１日に開かれた御前会議で，12月８日の開戦が決定された</li>
+      <li>11月26日，<span class="toggle-text">ハル・ノート</span>が示され，交渉は絶望的となり，12月１日に開かれた御前会議で，12月８日の開戦が決定された</li>
     </ul>
     <h3 id="ハルノート">ハル・ノート</h3>
     <ul>
@@ -131,7 +131,7 @@
     </ul>
     <h3 id="アジア太平洋戦争の始まり">アジア太平洋戦争の始まり</h3>
     <ul>
-      <li>1941年12月８日，日本陸軍がイギリス領マレー半島に上陸，海軍もハワイの〔〕を奇襲攻撃した
+      <li>1941年12月８日，日本陸軍がイギリス領マレー半島に上陸，海軍もハワイの<span class="toggle-text">真珠湾攻撃</span>を奇襲攻撃した
         <ul>
           <li>→アジア太平洋戦争（太平洋戦争）突入した</li>
         </ul>
@@ -142,7 +142,7 @@
     <h3 id="日本国内の反応と翼賛選挙">日本国内の反応と翼賛選挙</h3>
     <ul>
       <li>国民は，緒戦の勝利にわき立った</li>
-      <li>４月に実施された総選挙では，政府の支援を受けた推薦候補が圧倒的多数を獲得した（〔〕）
+      <li>４月に実施された総選挙では，政府の支援を受けた推薦候補が圧倒的多数を獲得した（<span class="toggle-text">翼賛選挙</span>）
         <ul>
           <li>→翼賛政治会が組織され，ほかの会派は禁止された</li>
         </ul>
@@ -152,7 +152,7 @@
     <ul>
       <li>日本は短期決戦で優位に立ち，和平交渉にもちこむことをねらっていた
         <ul>
-          <li>→1942年６月に〔〕で大敗，機動艦隊に大損害を受け，もくろみははずれた</li>
+          <li>→1942年６月に<span class="toggle-text">ミッドウェー海戦</span>で大敗，機動艦隊に大損害を受け，もくろみははずれた</li>
         </ul>
       </li>
       <li>８月からのガダルカナル攻防戦に敗北して翌年２月に撤退すると，戦局は日本に不利になった</li>
@@ -165,7 +165,7 @@
     </ul>
     <h3 id="占領地や進出地での実態">占領地や進出地での実態</h3>
     <ul>
-      <li>実際には日本は占領地で軍政をしき，〔〕を乱発しながら物資を収奪して戦争を遂行</li>
+      <li>実際には日本は占領地で軍政をしき，<span class="toggle-text">軍票</span>を乱発しながら物資を収奪して戦争を遂行</li>
       <li>日本軍はタイとビルマを結ぶ鉄道建設などに，捕虜や強制連行した人々を動員した</li>
       <li>マレーシアやシンガポールで中国系住民を反日の疑いで殺害するなど，過酷な動員や不法行為を行った
         <ul>
@@ -175,18 +175,18 @@
     </ul>
     <h3 id="総力戦による学徒出陣">総力戦による学徒出陣</h3>
     <ul>
-      <li>アジア太平洋戦争は，日本にとって初めての〔〕であり，大量の徴兵と労働力の動員が行われた</li>
+      <li>アジア太平洋戦争は，日本にとって初めての<span class="toggle-text">総力戦</span>であり，大量の徴兵と労働力の動員が行われた</li>
       <li>戦況が悪化すると兵力は不足
         <ul>
-          <li>→1943年末には文系学生の徴兵猶予が停止，〔〕が行われ，徴兵年齢も１年引きさげられた</li>
+          <li>→1943年末には文系学生の徴兵猶予が停止，<span class="toggle-text">学徒出陣</span>が行われ，徴兵年齢も１年引きさげられた</li>
         </ul>
       </li>
       <li>朝鮮（1943年），台湾（1944年）にも徴兵制がしかれた</li>
     </ul>
     <h3 id="労働力不足による徴用">労働力不足による徴用</h3>
     <ul>
-      <li>中等学校・高等女学校以上の生徒に〔〕が命じられ，未婚の女性も女子挺身隊に組織されて，軍需工場に配置された</li>
-      <li>朝鮮や台湾の人々も〔〕によって動員された</li>
+      <li>中等学校・高等女学校以上の生徒に<span class="toggle-text">勤労動員</span>が命じられ，未婚の女性も女子挺身隊に組織されて，軍需工場に配置された</li>
+      <li>朝鮮や台湾の人々も<span class="toggle-text">国民徴用令</span>によって動員された</li>
       <li>中国の占領地からも，多くの人々が労働力として日本に連行された
         <ul>
           <li>…過酷な労働条件のもと，多数の死者を出した</li>
@@ -212,7 +212,7 @@
     <ul>
       <li>1943年９月，日本は絶対国防圏を設定し，戦線の縮小維持と決戦態勢の強化をはかったが，連合国軍の反攻で南太平洋の日本軍は，次々に壊滅した
         <ul>
-          <li>→1944年６月，アメリカ軍が〔〕に上陸，守備隊が全滅して絶対防衛圏はくずれた</li>
+          <li>→1944年６月，アメリカ軍が<span class="toggle-text">サイパン島</span>に上陸，守備隊が全滅して絶対防衛圏はくずれた</li>
         </ul>
       </li>
       <li>東条内閣は７月に総辞職，小磯国昭内閣に交替した
@@ -223,13 +223,13 @@
     </ul>
     <h3 id="民間人の犠牲">民間人の犠牲</h3>
     <ul>
-      <li>アメリカ軍はB29爆撃機による〔〕を開始
+      <li>アメリカ軍はB29爆撃機による<span class="toggle-text">本土空襲</span>を開始
         <ul>
-          <li>→1945年３月の〔〕のような，都市と住民を標的とした無差別爆撃をくりかえした</li>
+          <li>→1945年３月の<span class="toggle-text">東京大空襲</span>のような，都市と住民を標的とした無差別爆撃をくりかえした</li>
         </ul>
       </li>
-      <li>住民は，空襲に備えて防空壕を掘り，児童を疎開（〔〕）させた</li>
-      <li>４月，アメリカ軍が沖縄島に上陸，住民をまきこみ悲惨な地上戦がくりひろげられた（〔〕）</li>
+      <li>住民は，空襲に備えて防空壕を掘り，児童を疎開（<span class="toggle-text">学徒疎開</span>）させた</li>
+      <li>４月，アメリカ軍が沖縄島に上陸，住民をまきこみ悲惨な地上戦がくりひろげられた（<span class="toggle-text">沖縄戦</span>）</li>
     </ul>
     <h3 id="戦時下の国民">戦時下の国民</h3>
     <ul>
@@ -261,12 +261,12 @@
     </ul>
     <h3 id="原子爆弾の投下と日本の降伏">原子爆弾の投下と日本の降伏</h3>
     <ul>
-      <li>アメリカは，８月６日に広島に〔〕を投下</li>
+      <li>アメリカは，８月６日に広島に<span class="toggle-text">原子爆弾</span>を投下</li>
       <li>８日にはソ連が日ソ中立条約を無視して対日宣戦を布告，満洲や朝鮮，樺太，千島列島に侵入を開始</li>
       <li>９日には，アメリカが長崎に原子爆弾を投下</li>
       <li>政府は８月14日，ポツダム宣言の受諾を連合国に通知
         <ul>
-          <li>→８月15日，天皇がラジオを通じて国民にポツダム宣言を受諾したことを伝えた（〔〕）</li>
+          <li>→８月15日，天皇がラジオを通じて国民にポツダム宣言を受諾したことを伝えた（<span class="toggle-text"></span>）</li>
         </ul>
       </li>
     </ul>
