--- a/history/term4/print9.html
+++ b/history/term4/print9.html
@@ -24,7 +24,7 @@
     </ul>
     <h3 id="ghqscapの設置">GHQ／SCAPの設置</h3>
     <ul>
-      <li>〔〕を最高司令官とする，〔〕（〔〕／〔〕）が設置された</li>
+      <li><span class="toggle-text">マッカーサー</span>を最高司令官とする，<span class="toggle-text">連合国軍最高司令官総司令部</span>（<span class="toggle-text">ＧＨＱ</span>／<span class="toggle-text">ＳＣＡＰ</span>）が設置された</li>
       <li>間接統治の方式がとられた</li>
     </ul>
     <h3 id="日本の主権範囲">日本の主権範囲</h3>
@@ -37,10 +37,10 @@
       <li>軍隊が解体され，内地・外地の将兵が復員，民間人の引き揚げも進められた</li>
       <li>戦争犯罪の疑いのある政府や軍部の指導者は逮捕され，うち28名はA級戦犯として起訴された
         <ul>
-          <li>→〔〕（〔〕）で審理された</li>
+          <li>→<span class="toggle-text">極東国際軍事裁判</span>（<span class="toggle-text">東京裁判</span>）で審理された</li>
         </ul>
       </li>
-      <li>戦争協力者や超国家主義者など約21万人も，公的な地位から追放された（〔〕）</li>
+      <li>戦争協力者や超国家主義者など約21万人も，公的な地位から追放された（<span class="toggle-text">公職追放</span>）</li>
     </ul>
     <h3 id="人権指令">人権指令</h3>
     <ul>
@@ -65,7 +65,7 @@
     </ul>
     <h3 id="独占禁止法">独占禁止法</h3>
     <ul>
-      <li>1947年，〔〕を制定，財閥の復活を防ぐため，持株会社やカルテル，トラストなどいっさいの独占的組織を禁止
+      <li>1947年，<span class="toggle-text">独占禁止法</span>を制定，財閥の復活を防ぐため，持株会社やカルテル，トラストなどいっさいの独占的組織を禁止
         <ul>
           <li>…その執行機関として公正取引委員会が設置された</li>
         </ul>
@@ -73,7 +73,7 @@
     </ul>
     <h3 id="過度経済力集中排除法">過度経済力集中排除法</h3>
     <ul>
-      <li>これまで主要産業を独占してきた大企業を分割するための〔〕も制定された</li>
+      <li>これまで主要産業を独占してきた大企業を分割するための<span class="toggle-text">過度経済力集中排除法</span>も制定された</li>
     </ul>
     <h3 id="農地改革">農地改革</h3>
     <ul>
@@ -115,88 +115,13 @@
     </ul>
     <h3 id="学校教育法">学校教育法</h3>
     <ul>
-      <li>〔〕の新しい学校制度となった</li>
+      <li><span class="toggle-text">6・3・3・4制</span>の新しい学校制度となった</li>
     </ul>
     <h3 id="教育委員会">教育委員会</h3>
     <ul>
       <li>1948年７月，教育委員会法制定，都道府県や市町村ごとに公選制による教育委員会が設けられた
         <ul>
           <li>…教育行政の地方分権と民主化をめざした</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="戦後の人々の生活">戦後の人々の生活</h3>
-    <ul>
-      <li>日本の国土は荒廃，生産力も大幅に低下したため，物資の不足が深刻化</li>
-      <li>都市部では，空襲で焼け出された人々が防空壕や仮設のバラック小屋で生活し，失業者があふれた</li>
-      <li>配給米も不足，食料難は戦争末期よりも厳しかった
-        <ul>
-          <li>→農村への買い出し，〔〕での購入，さつまいもなど代用食の栽培が行われた</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="インフレーションの発生">インフレーションの発生</h3>
-    <ul>
-      <li>物資不足，政府が終戦処理のための軍需企業への支払い，占領軍の受けいれ準備などへの多額の支出
-        <ul>
-          <li>→大量の通貨が市場に出まわり，急激なインフレへ</li>
-          <li>→生活難がいっそう深刻化</li>
-        </ul>
-      </li>
-      <li>1946年，政府は〔〕を施行
-        <ul>
-          <li>→預金の封鎖と新円切り換えを実施し，インフレをおさえこもうとした</li>
-          <li>…効果は一時的なものにすぎなかった</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="労働運動や農民運動の活発化">労働運動や農民運動の活発化</h3>
-    <ul>
-      <li>インフレのなか，労働運動や農民運動などが活発化，GHQも労働組合を育成する方針をとった</li>
-    </ul>
-    <h3 id="労働三法の制定">労働三法の制定</h3>
-    <ul>
-      <li>…労働者の団結権・団体交渉権・争議権を認める〔〕，〔〕，８時間労働制を規定した〔〕</li>
-    </ul>
-    <h3 id="大衆運動と政党の再建">大衆運動と政党の再建</h3>
-    <ul>
-      <li>全国組織である日本労働組合総同盟（〔〕）と全日本産業別労働組合会議（〔〕）が組織された</li>
-      <li>日本農民組合も結成された</li>
-      <li>女性の地位向上をめざす運動や，水平社運動を引きついだ部落解放運動も再開された</li>
-      <li>大衆運動の発展の中で，政党の再建も進んだ</li>
-    </ul>
-    <h3 id="日本共産党">日本共産党</h3>
-    <ul>
-      <li>1945年10月，人権指令によって出獄した徳田球一らを中心に，〔〕が合法政党として活動を再開</li>
-    </ul>
-    <h3 id="日本社会党">日本社会党</h3>
-    <ul>
-      <li>翌月，戦前の無産政党が合流して〔〕を結成</li>
-    </ul>
-    <h3 id="日本自由党">日本自由党</h3>
-    <ul>
-      <li>〔〕など旧立憲政友会系で翼賛選挙で非推薦だった議員が中心となって〔〕を結成</li>
-    </ul>
-    <h3 id="日本進歩党">日本進歩党</h3>
-    <ul>
-      <li>翼賛選挙で推薦された旧既成政党議員が中心となって結成された</li>
-    </ul>
-    <h3 id="日本協同党">日本協同党</h3>
-    <ul>
-      <li>12月には，小規模事業者が集まって組合を設立
-        <ul>
-          <li>→協力して生産活動を行うことをめざす協同組合主義をかかげる日本協同党が誕生</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="吉田茂内閣の成立">吉田茂内閣の成立</h3>
-    <ul>
-      <li>1945年12月，選挙法改正，満20歳以上の男女に選挙権が拡大，全人口のおよそ半分が有権者となった</li>
-      <li>翌年４月，戦後初の衆議院議員総選挙が行われた
-        <ul>
-          <li>→新人議員を多数当選させた日本自由党が第一党に</li>
-          <li>→しかし，組閣を前に鳩山一郎が公職追放</li>
-          <li>→日本自由党は，戦前から親英米派の外交官で，GHQとの関係も良好だった〔〕を首相とした</li>
         </ul>
       </li>
     </ul>
@@ -217,7 +142,7 @@
     </ul>
     <h3 id="日本国憲法の公布">日本国憲法の公布</h3>
     <ul>
-      <li>憲法改正草案は，帝国議会の審議を経て，1946年11月３日に〔〕として公布された
+      <li>憲法改正草案は，帝国議会の審議を経て，1946年11月３日に<span class="toggle-text">日本国憲法</span>として公布された
         <ul>
           <li>→翌年５月３日から施行</li>
         </ul>
@@ -241,45 +166,6 @@
     <ul>
       <li>民法の改正によって婚姻および相続上の男女同権が認められた</li>
       <li>戸主を中心とした家制度から，夫婦中心のものへと変わった</li>
-    </ul>
-    <h3 id="労働運動の激化">労働運動の激化</h3>
-    <ul>
-      <li>民主化やインフレ，食料難のなかで，労働運動が高揚した</li>
-      <li>官公庁労働者を中心に計画された〔〕で，運動は頂点に達した
-        <ul>
-          <li>…1947年２月１日を期して計画されたが，GHQの命令で，ストは前日になって中止を余儀なくされた</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="社会党による連立内閣">社会党による連立内閣</h3>
-    <ul>
-      <li>1947年４月，社会党が第一党となり，党首の〔〕を首相とする連立内閣が成立</li>
-      <li>片山内閣は，吉田内閣以来の〔〕をおしすすめたが，インフレはさらに進行</li>
-      <li>社会主義的政策をとらない政府に対する労働者の不満は高まり，社会党内左派からの攻撃が激化
-        <ul>
-          <li>→内閣は総辞職した</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="傾斜生産方式">傾斜生産方式</h3>
-    <ul>
-      <li>…資材と資金を石炭・鉄鋼など重要産業部門に集中させて生産の拡大をはかる政策</li>
-    </ul>
-    <h3 id="芦田均内閣">芦田均内閣</h3>
-    <ul>
-      <li>片山内閣の後，日本進歩党の系譜をひく民主党党首の〔〕が連立内閣を引きついだ
-        <ul>
-          <li>→昭和電工事件によって短命に終わった</li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="第２次吉田茂内閣">第２次吉田茂内閣</h3>
-    <ul>
-      <li>1948年10月，民主自由党の吉田茂が第２次吉田内閣を組織した
-        <ul>
-          <li>→以後，対米協調・経済復興を基本方針として，長期間にわたり政権を担当した</li>
-        </ul>
-      </li>
     </ul>
   </main>
 
