--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 	</ul>
 	<h3>数学IIA</h3>
 	<ul>
-		<li><a href="pdf/math2a.pdf">過去問</a></li>
+		<li><a href="pdf/term4/math2a.pdf">過去問</a></li>
 		<li><a href="https://sekibunapp.stradty.com/">積分app</a></li>
-		<li><a href="pdf/math2a_ex.pdf">まとめプリント</a></li>
+		<li><a href="pdf/term4/math2a_ex.pdf">まとめプリント</a></li>
 	</ul>
 	<h3>数学IIB</h3>
 	<ul>
-		<li><a href="pdf/math2b.pdf">過去問</a></li>
+		<li><a href="pdf/term4/math2b.pdf">過去問</a></li>
 	</ul>
 	<h3>物理</h3>
 	<ul>
