--- a/history/term4/print7.html
+++ b/history/term4/print7.html
@@ -109,8 +109,8 @@
     </ul>
     <h3 id="日本の戦争目的">日本の戦争目的</h3>
     <ul>
-      <li>1938年１月，近衛首相は「〔〕」と声明，平和交渉の道をとざした</li>
-      <li>11月，〔〕建設の声明を出し，戦争目的が日本・満洲国・中国による新秩序の樹立にあるとした</li>
+      <li>1938年１月，近衛首相は「国民政府を対手とせず〕」と声明，平和交渉の道をとざした</li>
+      <li>11月，<span class="toggle-text">東亜新秩序</span>建設の声明を出し，戦争目的が日本・満洲国・中国による新秩序の樹立にあるとした</li>
       <li>翌月，国民党副総裁の汪兆銘（精衛）の擁立をめざして重慶から脱出させた
         <ul>
           <li>→汪は1940年３月，南京に親日的な新政権を立てたが，戦争の終結には結びつかなかった</li>
@@ -121,7 +121,7 @@
     <ul>
       <li>広田内閣は，軍拡で重工業資源の輸入が増えると予想
         <ul>
-          <li>→1937年１月，工場生産などに必要な原料の輸入を許可制として〔〕を開始</li>
+          <li>→1937年１月，工場生産などに必要な原料の輸入を許可制として<span class="toggle-text">経済統制</span>を開始</li>
         </ul>
       </li>
       <li>近衛内閣は財政経済３原則を発表，需要と供給の調整を政府が行う方針をとった
@@ -136,11 +136,11 @@
     </ul>
     <h3 id="企画院の設置">企画院の設置</h3>
     <ul>
-      <li>翌月，〔〕を設置，物資動員計画を策定し，軍需を優先した物資の需給調整を行うこととした</li>
+      <li>翌月，<span class="toggle-text">企画院</span>を設置，物資動員計画を策定し，軍需を優先した物資の需給調整を行うこととした</li>
     </ul>
     <h3 id="国家総動員法">国家総動員法</h3>
     <ul>
-      <li>1938年4月，〔〕公布，議会の承認なしに勅令によって労働力・物資・資金を動員できることになった</li>
+      <li>1938年4月，<span class="toggle-text">国家総動員法</span>公布，議会の承認なしに勅令によって労働力・物資・資金を動員できることになった</li>
     </ul>
     <h3 id="国家総動員法によって">国家総動員法によって</h3>
     <ul>
@@ -150,9 +150,9 @@
     </ul>
     <h3 id="国民精神総動員運動">国民精神総動員運動</h3>
     <ul>
-      <li>政府は，〔〕によって，国民の戦争協力体制をととのえようとした</li>
+      <li>政府は，<span class="toggle-text">国民精神総動員法</span>によって，国民の戦争協力体制をととのえようとした</li>
       <li>戦費調達のため国債の購入が強制され，貯蓄を促した</li>
-      <li>職場では1938年，〔〕が結成
+      <li>職場では1938年，<span class="toggle-text">産業報国会</span>が結成
         <ul>
           <li>→労働組合を解散して国家の政策に協力した</li>
         </ul>
@@ -171,12 +171,12 @@
     </ul>
     <h3 id="文化思想への統制">文化・思想への統制</h3>
     <ul>
-      <li>文部省は1937年，『〔〕』を刊行・配布
+      <li>文部省は1937年，『<span class="toggle-text">国体の本義</span>』を刊行・配布
         <ul>
           <li>…西洋の個人主義を批判して天皇中心の国家観を示した</li>
         </ul>
       </li>
-      <li>1941年，小学校は〔〕に改められた
+      <li>1941年，小学校は<span class="toggle-text">国民学校</span>に改められた
         <ul>
           <li>…就学義務を強化し，国家のための人材育成をめざした</li>
         </ul>
@@ -185,7 +185,7 @@
     </ul>
     <h3 id="皇民化政策">皇民化政策</h3>
     <ul>
-      <li>植民地では「〔〕」が進められた</li>
+      <li>植民地では「<span class="toggle-text">皇民化</span>」が進められた</li>
       <li>朝鮮では日本語の使用や神社参拝の強制，創氏改名などが行われた</li>
       <li>陸軍志願兵制度がしかれ，やがて国家総動員法にもとづく徴用も始まった</li>
       <li>台湾でも，新聞の漢文欄の廃止，日本語常用運動，神社参拝の強制，改姓名などが進められた
