テスト日程追加

--- a/index.html
+++ b/index.html
@@ -14,6 +14,53 @@
 	<p><a href="UPDATE.md">2026/01/14：歴史追加</a></p>
 	<hr>
 	<h2>後期末</h2>
+	<table class="test-table">
+		<thead>
+			<tr>
+				<th>日付</th>
+				<th>1科目</th>
+				<th>2科目</th>
+				<th>3科目</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th colspan="4">休日</th>
+			</tr>
+			<tr>
+				<th>2/5木</th>
+				<td>化学</td>
+				<td>国語</td>
+				<td>集論</td>
+			</tr>
+			<tr>
+				<th>2/6金</th>
+				<td colspan="2">数学B</td>
+				<td>倫理</td>
+			</tr>
+			<tr>
+				<th colspan="4">3連休</th>
+			</tr>
+			<tr>
+				<th>2/10火</th>
+				<td>歴史</td>
+				<td>英語W</td>
+				<td>電気</td>
+			</tr>
+			<tr>
+				<th colspan="4">休日</th>
+			</tr>
+			<tr>
+				<th>2/12木</th>
+				<td colspan="3">数学A</td>
+			</tr>
+			<tr>
+				<th>2/13金</th>
+				<td colspan="2">物理</td>
+				<td>英語R</td>
+			</tr>
+		</tbody>
+	</table>
 	<h3>歴史</h3>
 	<ul>
 		<li><a href="history/term4/print1.html">プリント</a></li>
@@ -42,7 +89,7 @@
 	<hr>
 	<h2>日課</h2>
 	<p>タップするとシラバスに飛びます</p>
-	<table>
+	<table class="nikka-table">
 		<thead>
 			<tr>
 				<th>曜日</th>
