ちょっと変更

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 		<thead>
 			<tr>
 				<th>日付</th>
-				<th>1科目</th>
-				<th>2科目</th>
-				<th>3科目</th>
+				<th colspan="3">科目</th>
 			</tr>
 		</thead>
 		<tbody>
