--- a/history/term4/print8.html
+++ b/history/term4/print8.html
@@ -131,7 +131,7 @@
     </ul>
     <h3 id="アジア太平洋戦争の始まり">アジア太平洋戦争の始まり</h3>
     <ul>
-      <li>1941年12月８日，日本陸軍がイギリス領マレー半島に上陸，海軍もハワイの<span class="toggle-text">真珠湾攻撃</span>を奇襲攻撃した
+      <li>1941年12月８日，日本陸軍がイギリス領マレー半島に上陸，海軍もハワイの<span class="toggle-text">真珠湾</span>を奇襲攻撃した
         <ul>
           <li>→アジア太平洋戦争（太平洋戦争）突入した</li>
         </ul>
@@ -228,7 +228,7 @@
           <li>→1945年３月の<span class="toggle-text">東京大空襲</span>のような，都市と住民を標的とした無差別爆撃をくりかえした</li>
         </ul>
       </li>
-      <li>住民は，空襲に備えて防空壕を掘り，児童を疎開（<span class="toggle-text">学徒疎開</span>）させた</li>
+      <li>住民は，空襲に備えて防空壕を掘り，児童を疎開（<span class="toggle-text">学童疎開</span>）させた</li>
       <li>４月，アメリカ軍が沖縄島に上陸，住民をまきこみ悲惨な地上戦がくりひろげられた（<span class="toggle-text">沖縄戦</span>）</li>
     </ul>
     <h3 id="戦時下の国民">戦時下の国民</h3>
