--- a/history/term4/print8.html
+++ b/history/term4/print8.html
@@ -266,7 +266,7 @@
       <li>９日には，アメリカが長崎に原子爆弾を投下</li>
       <li>政府は８月14日，ポツダム宣言の受諾を連合国に通知
         <ul>
-          <li>→８月15日，天皇がラジオを通じて国民にポツダム宣言を受諾したことを伝えた（<span class="toggle-text"></span>）</li>
+          <li>→８月15日，天皇がラジオを通じて国民にポツダム宣言を受諾したことを伝えた（<span class="toggle-text">玉音放送</span>）</li>
         </ul>
       </li>
     </ul>
