--- a/index.html
+++ b/index.html
@@ -9,172 +9,173 @@
 <body>
 	<script src="header.js"></script>
 
-	<h1>テスト対策</h1>
-	<h2>更新情報</h2>
-	<p><a href="UPDATE.md">2026/01/14：歴史追加</a></p>
-	<hr>
-	<h2>後期末</h2>
-	<table class="test-table">
-		<thead>
-			<tr>
-				<th>日付</th>
-				<th colspan="3">科目</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<th colspan="4">休日</th>
-			</tr>
-			<tr>
-				<th>2/5木</th>
-				<td>化学</td>
-				<td>国語</td>
-				<td>集論</td>
-			</tr>
-			<tr>
-				<th>2/6金</th>
-				<td colspan="2">数学B</td>
-				<td>倫理</td>
-			</tr>
-			<tr>
-				<th colspan="4">3連休</th>
-			</tr>
-			<tr>
-				<th>2/10火</th>
-				<td>歴史</td>
-				<td>英語W</td>
-				<td>電気</td>
-			</tr>
-			<tr>
-				<th colspan="4">休日</th>
-			</tr>
-			<tr>
-				<th>2/12木</th>
-				<td colspan="3">数学A</td>
-			</tr>
-			<tr>
-				<th>2/13金</th>
-				<td colspan="2">物理</td>
-				<td>英語R</td>
-			</tr>
-		</tbody>
-	</table>
-	<h3>歴史</h3>
-	<ul>
-		<li><a href="history/term4/print1.html">プリント</a></li>
-	</ul>
-	<h3>数学IIA</h3>
-	<ul>
-		<li><a href="pdf/term4/math2a.pdf">過去問</a></li>
-		<li><a href="https://sekibunapp.stradty.com/">積分app</a></li>
-		<li><a href="pdf/term4/math2a_ex.pdf">まとめプリント</a></li>
-	</ul>
-	<h3>数学IIB</h3>
-	<ul>
-		<li><a href="pdf/term4/math2b.pdf">過去問</a></li>
-	</ul>
-	<h3>物理</h3>
-	<ul>
-		<li><a href="https://wakariyasui.sakura.ne.jp/#elec">わかりやすい高校物理の部屋</a></li>
-	</ul>
-	<h3>化学</h3>
-	<ul>
-		<li><a href="https://pigboat-don-guri131.ssl-lolipop.jp/">高校化学</a></li>
-	</ul>
-	<!-- <h3>国語</h3>
-	<h3>英語IR</h3>
-	<h3>英語IW</h3> -->
-	<hr>
-	<h2>日課</h2>
-	<p>タップするとシラバスに飛びます</p>
-	<table class="nikka-table">
-		<thead>
-			<tr>
-				<th>曜日</th>
-				<th>1限</th>
-				<th>2限</th>
-				<th>3限</th>
-				<th>4限</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>月</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0034&amp;year=2024&amp;lang=ja">電気電子回路</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0046&amp;year=2024&amp;lang=ja">数学IIB</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0027&amp;year=2024&amp;lang=ja">体育</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0042&amp;year=2024&amp;lang=ja">コンピューター工学</a>
-				</td>
-			</tr>
-			<tr>
-				<td>火</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0045&amp;year=2024&amp;lang=ja">数学IIA</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0037&amp;year=2024&amp;lang=ja">倫理</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0036&amp;year=2024&amp;lang=ja">歴史</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0024&amp;year=2024&amp;lang=ja">課題発見</a>
-				</td>
-			</tr>
-			<tr>
-				<td>水</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0047&amp;year=2024&amp;lang=ja">物理I</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0039&amp;year=2024&amp;lang=ja">総合英語IW</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0041&amp;year=2024&amp;lang=ja">集合と論理</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0032&amp;year=2024&amp;lang=ja">化学II</a>
-				</td>
-			</tr>
-			<tr>
-				<td>木</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0049&amp;year=2024&amp;lang=ja">情報工学演習I</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0030&amp;year=2024&amp;lang=ja">芸術</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0046&amp;year=2024&amp;lang=ja">数学IIB</a>
-				</td>
-				<td>HR</td>
-			</tr>
-			<tr>
-				<td>金</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0035&amp;year=2024&amp;lang=ja">国語II</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0043&amp;year=2024&amp;lang=ja">プログラミング</a>
-				</td>
-				<td><a
-						href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0038&amp;year=2024&amp;lang=ja">総合英語IR</a>
-				</td>
-				<td>-</td>
-			</tr>
-		</tbody>
-	</table>
-
-	<h2>行事予定</h2>
-	<p>タップすると拡大します</p>
-	<p><a href="yotei.html"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
+	<main>
+		<h1>テスト対策</h1>
+		<h2>更新情報</h2>
+		<p><a href="UPDATE.md">2026/01/14：歴史追加</a></p>
+		<hr>
+		<h2>後期末</h2>
+		<table class="test-table">
+			<thead>
+				<tr>
+					<th>日付</th>
+					<th colspan="3">科目</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th colspan="4">休日</th>
+				</tr>
+				<tr>
+					<th>2/5(木)</th>
+					<td>化学</td>
+					<td>国語</td>
+					<td>集論</td>
+				</tr>
+				<tr>
+					<th>2/6(金)</th>
+					<td colspan="2">数学B</td>
+					<td>倫理</td>
+				</tr>
+				<tr>
+					<th colspan="4">3連休</th>
+				</tr>
+				<tr>
+					<th>2/10(火)</th>
+					<td>歴史</td>
+					<td>英語W</td>
+					<td>電気</td>
+				</tr>
+				<tr>
+					<th colspan="4">休日</th>
+				</tr>
+				<tr>
+					<th>2/12(木)</th>
+					<td colspan="3">数学A</td>
+				</tr>
+				<tr>
+					<th>2/13(金)</th>
+					<td colspan="2">物理</td>
+					<td>英語R</td>
+				</tr>
+			</tbody>
+		</table>
+		<h3>歴史</h3>
+		<ul>
+			<li><a href="history/term4/print1.html">プリント</a></li>
+		</ul>
+		<h3>数学IIA</h3>
+		<ul>
+			<li><a href="pdf/term4/math2a.pdf">過去問</a></li>
+			<li><a href="https://sekibunapp.stradty.com/">積分app</a></li>
+			<li><a href="pdf/term4/math2a_ex.pdf">まとめプリント</a></li>
+		</ul>
+		<h3>数学IIB</h3>
+		<ul>
+			<li><a href="pdf/term4/math2b.pdf">過去問</a></li>
+		</ul>
+		<h3>物理</h3>
+		<ul>
+			<li><a href="https://wakariyasui.sakura.ne.jp/#elec">わかりやすい高校物理の部屋</a></li>
+		</ul>
+		<h3>化学</h3>
+		<ul>
+			<li><a href="https://pigboat-don-guri131.ssl-lolipop.jp/">高校化学</a></li>
+		</ul>
+		<!-- <h3>国語</h3>
+		<h3>英語IR</h3>
+		<h3>英語IW</h3> -->
+		<hr>
+		<h2>日課</h2>
+		<p>タップするとシラバスに飛びます</p>
+		<table class="nikka-table">
+			<thead>
+				<tr>
+					<th>曜日</th>
+					<th>1限</th>
+					<th>2限</th>
+					<th>3限</th>
+					<th>4限</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>月</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0034&amp;year=2024&amp;lang=ja">電気電子回路</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0046&amp;year=2024&amp;lang=ja">数学IIB</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0027&amp;year=2024&amp;lang=ja">体育</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0042&amp;year=2024&amp;lang=ja">コンピューター工学</a>
+					</td>
+				</tr>
+				<tr>
+					<td>火</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0045&amp;year=2024&amp;lang=ja">数学IIA</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0037&amp;year=2024&amp;lang=ja">倫理</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0036&amp;year=2024&amp;lang=ja">歴史</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0024&amp;year=2024&amp;lang=ja">課題発見</a>
+					</td>
+				</tr>
+				<tr>
+					<td>水</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0047&amp;year=2024&amp;lang=ja">物理I</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0039&amp;year=2024&amp;lang=ja">総合英語IW</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0041&amp;year=2024&amp;lang=ja">集合と論理</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0032&amp;year=2024&amp;lang=ja">化学II</a>
+					</td>
+				</tr>
+				<tr>
+					<td>木</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0049&amp;year=2024&amp;lang=ja">情報工学演習I</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0030&amp;year=2024&amp;lang=ja">芸術</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0046&amp;year=2024&amp;lang=ja">数学IIB</a>
+					</td>
+					<td>HR</td>
+				</tr>
+				<tr>
+					<td>金</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0035&amp;year=2024&amp;lang=ja">国語II</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0043&amp;year=2024&amp;lang=ja">プログラミング</a>
+					</td>
+					<td><a
+							href="https://syllabus.kosen-k.go.jp/Pages/PublicSyllabus?school_id=35&amp;department_id=03&amp;subject_id=0038&amp;year=2024&amp;lang=ja">総合英語IR</a>
+					</td>
+					<td>-</td>
+				</tr>
+			</tbody>
+		</table>
+		<h2>行事予定</h2>
+		<p>タップすると拡大します</p>
+		<p><a href="yotei.html"><img src="2025gyouziyoteihyou_02.jpg" alt="行事予定" width="100%"></a></p>
+	</main>
 	<a href="#" id="page-top">TOP</a>
 	<script src="script.js"></script>
 </body>
