英単語・漢字追加

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
 		<ul>
 			<li><a href="history/term4/print1.html">プリント</a></li>
 		</ul>
+		<h3>英語R</h3>
+		<ul>
+			<li><a href="english/term4/print.html">英単語</a></li>
+		</ul>
+		<h3>国語</h3>
+		<ul>
+			<li><a href="japanese/term4/print1.html">漢字</a></li>
+		</ul>
 		<h3>数学IIA</h3>
 		<ul>
 			<li><a href="pdf/term4/math2a.pdf">過去問</a></li>
