--- a/japanese/term4/print2.html
+++ b/japanese/term4/print2.html
@@ -11,7 +11,7 @@
 	<script src="header.js"></script>
 
 	<main class="hist-main">
-		<h1>漢字テスト6</h1>
+		<h1>漢字テスト7</h1>
 		<button class="toggle-all-btn">すべて表示する</button>
 		<hr>
 		<table class="nikka-table" id="wordTable">
@@ -21,26 +21,26 @@
 
 	<script>
 		// コンマ区切りの単語データ
-		const wordList = `悪人のイメージをフッショクしたい。,払拭
-先生にきつくシッセキされ反省した。,叱責
-イントウの炎症を抑える薬。,咽頭
-容疑者は昨夜遅くにホソクされた。,捕捉
-新車購入費用をネンシュツする。,捻出
-トラは絶滅キグ動物である。,危惧
-あなたにチョウショウされる理由はない。,嘲笑
-犬は鋭いキュウカクを持つ動物だ。,嗅覚
-予算不足をホテンする方法があった。,補填
-強盗はケンジュウを所持していた。,拳銃
-競争相手に一シ報いる。,矢
-行進は一シ乱れず行われた。,糸
-組織ではキョウ調性が必要だ。,協
-重要な点をキョウ調した。,強
-イショクの顔合わせが話題だ。,異色
-研究をイショクする。,委嘱
-最後まで自分の意シを貫く。,志
-意シの疎通を欠く。,思
-絶タイ絶命の危機をかわす。,体
-絶タイ多数で採択された。,対`.split('\n').map(line => {
+		const wordList = `いつまでもインウが止まない。,淫雨
+記入はカイショでお願いします。,楷書
+彼のチミツな計算に間違いはない。,緻密
+オクソクでものを言うべきではない。,臆測
+彼のアイマイな態度が皆を迷わせた。,曖昧
+メイリョウな発音が正確さの条件だ。,明瞭
+刑事がミケンにしわを寄せて考える。,眉間
+ワキバラを引き締めるストレッチ。,脇腹
+観客を魅了するカンペキな演技だ。,完璧
+暗い所に入るとドウコウは開く。,瞳孔
+いよいよ決センの時が来た。,戦
+決セン投票で決まった議長。,選
+最近の気候は異ジョウだ。,常
+機械に異ジョウはない。,状
+既セイ服を購入する。,製
+既セイの事実として知られる。,成
+あえて批判をカン受する。,甘
+子どもはカン受性が豊かだ。,感
+不法な建物を強セイ的に壊す。,制
+各家庭に募金を強セイする。,請`.split('\n').map(line => {
 			const [word, meaning] = line.split(',');
 			return { word, meaning };
 		});
