--- a/japanese/term4/print3.html
+++ b/japanese/term4/print3.html
@@ -11,7 +11,7 @@
 	<script src="header.js"></script>
 
 	<main class="hist-main">
-		<h1>漢字テスト6</h1>
+		<h1>漢字テスト8</h1>
 		<button class="toggle-all-btn">すべて表示する</button>
 		<hr>
 		<table class="nikka-table" id="wordTable">
@@ -21,26 +21,26 @@
 
 	<script>
 		// コンマ区切りの単語データ
-		const wordList = `悪人のイメージをフッショクしたい。,払拭
-先生にきつくシッセキされ反省した。,叱責
-イントウの炎症を抑える薬。,咽頭
-容疑者は昨夜遅くにホソクされた。,捕捉
-新車購入費用をネンシュツする。,捻出
-トラは絶滅キグ動物である。,危惧
-あなたにチョウショウされる理由はない。,嘲笑
-犬は鋭いキュウカクを持つ動物だ。,嗅覚
-予算不足をホテンする方法があった。,補填
-強盗はケンジュウを所持していた。,拳銃
-競争相手に一シ報いる。,矢
-行進は一シ乱れず行われた。,糸
-組織ではキョウ調性が必要だ。,協
-重要な点をキョウ調した。,強
-イショクの顔合わせが話題だ。,異色
-研究をイショクする。,委嘱
-最後まで自分の意シを貫く。,志
-意シの疎通を欠く。,思
-絶タイ絶命の危機をかわす。,体
-絶タイ多数で採択された。,対`.split('\n').map(line => {
+		const wordList = `ホオベニをつけると顔が華やぐ。,頬紅
+長年使い込んだドナベで料理する。,土鍋
+人身事故でキンコ刑を言い渡された人物。,禁錮
+横川のカマメシは駅弁として有名だ。,釜飯
+ゴイの学習に力を入れる。,語彙
+私的なことをセンサクする人がいる。,詮索
+友人はドンヨクに知識を吸収した。,貪欲
+書類には領収書のチョウフが必要だ。,貼付
+試合でサイハイを振るう。,采配
+激突したセツナの記憶がない。,刹那
+冬でもアツ着をしない。,厚
+恋人への思いをアツく語る。,熱
+今日は今年一番のアツさだ。,暑
+時計の針をススめた。,進
+強く入会をススめられた。,勧
+先方に口をキいてもらった。,利
+ようやく薬がキいてきた。,効
+罪をオカした人を許す。,犯
+危険をオカして仕事をする。,冒
+決してオカしてはならない聖域。,侵`.split('\n').map(line => {
 			const [word, meaning] = line.split(',');
 			return { word, meaning };
 		});
