--- a/japanese/term4/print4.html
+++ b/japanese/term4/print4.html
@@ -11,7 +11,7 @@
 	<script src="header.js"></script>
 
 	<main class="hist-main">
-		<h1>漢字テスト6</h1>
+		<h1>漢字テスト9</h1>
 		<button class="toggle-all-btn">すべて表示する</button>
 		<hr>
 		<table class="nikka-table" id="wordTable">
@@ -21,26 +21,26 @@
 
 	<script>
 		// コンマ区切りの単語データ
-		const wordList = `悪人のイメージをフッショクしたい。,払拭
-先生にきつくシッセキされ反省した。,叱責
-イントウの炎症を抑える薬。,咽頭
-容疑者は昨夜遅くにホソクされた。,捕捉
-新車購入費用をネンシュツする。,捻出
-トラは絶滅キグ動物である。,危惧
-あなたにチョウショウされる理由はない。,嘲笑
-犬は鋭いキュウカクを持つ動物だ。,嗅覚
-予算不足をホテンする方法があった。,補填
-強盗はケンジュウを所持していた。,拳銃
-競争相手に一シ報いる。,矢
-行進は一シ乱れず行われた。,糸
-組織ではキョウ調性が必要だ。,協
-重要な点をキョウ調した。,強
-イショクの顔合わせが話題だ。,異色
-研究をイショクする。,委嘱
-最後まで自分の意シを貫く。,志
-意シの疎通を欠く。,思
-絶タイ絶命の危機をかわす。,体
-絶タイ多数で採択された。,対`.split('\n').map(line => {
+		const wordList = `北京原人のズガイコツが発見された。,頭蓋骨
+肩をダッキュウした力士は休場した。,脱臼
+猛暑で試合はカコクなものになった。,苛酷
+多くの観客を前にしてイシュクする。,萎縮
+良性のシュヨウで安心した。,腫瘍
+キリンのハンテン模様を観察する。,斑点
+こんなに暗いヤミヨは都会にはない。,闇夜
+コケツとは危険な場所のたとえだ。,虎穴
+文明のコンセキが残る島に行く。,痕跡
+風邪のときにはクズユを飲む。,葛湯
+教室で服装をトトノえる。,整
+煮物の味をトトノえる。,調
+荷物をたくさんツんで走る。,積
+草花をツんで飾る。,摘
+目のツんでいる編み物。,詰
+事件の解決にツトめる。,努
+出版社にツトめる兄。,勤
+指名されて議長をツトめる。,務
+都合で旅立ちをノばす。,延
+背筋をノばして立つ。,伸`.split('\n').map(line => {
 			const [word, meaning] = line.split(',');
 			return { word, meaning };
 		});
